--- a/src/Processors/CMakeLists.txt
+++ b/src/Processors/CMakeLists.txt
@@ -30,3 +30,4 @@ ADD_PROCESSOR(KW_Palm_LUT)
 ADD_PROCESSOR(KW_Skin)
 ADD_PROCESSOR(KW_Cov)
 ADD_PROCESSOR(KW_Palm_Description)
+ADD_PROCESSOR(KW_Skin_Detection)
