Detekcja skoru - przestrzen barw YCrCb

--- a/src/Processors/CMakeLists.txt
+++ b/src/Processors/CMakeLists.txt
@@ -31,3 +31,4 @@ ADD_PROCESSOR(KW_Skin)
 ADD_PROCESSOR(KW_Cov)
 ADD_PROCESSOR(KW_Palm_Description)
 ADD_PROCESSOR(KW_Skin_Detection)
+ADD_PROCESSOR(KW_Skin_DetectionYCbCr)
