Filter wstepny rozpoznawania koloru skory

--- a/src/Processors/CMakeLists.txt
+++ b/src/Processors/CMakeLists.txt
@@ -32,3 +32,5 @@ ADD_PROCESSOR(KW_Cov)
 ADD_PROCESSOR(KW_Palm_Description)
 ADD_PROCESSOR(KW_Skin_Detection)
 ADD_PROCESSOR(KW_Skin_DetectionYCbCr)
+ADD_PROCESSOR(KW_Initial_Filter)
+ADD_PROCESSOR(KW_RGB_TSL)
