Dodanie KW_Increase_Contrast - zwiekszenie kontrastu TS i dodanie KW_RGB_TSL konwersja przestrzni barw - z bledami

--- a/src/Processors/CMakeLists.txt
+++ b/src/Processors/CMakeLists.txt
@@ -34,3 +34,4 @@ ADD_PROCESSOR(KW_Skin_Detection)
 ADD_PROCESSOR(KW_Skin_DetectionYCbCr)
 ADD_PROCESSOR(KW_Initial_Filter)
 ADD_PROCESSOR(KW_RGB_TSL)
+ADD_PROCESSOR(KW_Increase_Contrast)
