--- a/src/Processors/CMakeLists.txt
+++ b/src/Processors/CMakeLists.txt
@@ -35,3 +35,4 @@ ADD_PROCESSOR(KW_Skin_DetectionYCbCr)
 ADD_PROCESSOR(KW_Initial_Filter)
 ADD_PROCESSOR(KW_RGB_TSL)
 ADD_PROCESSOR(KW_Increase_Contrast)
+ADD_PROCESSOR(KW_Skin_Detection_TSL)
